[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/attacks/pin/PinProjectile.png" type="Texture" id=1]
[ext_resource path="res://objects/Item Objects/PinProjectile.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 314.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 26.0

[node name="PinProjectile" type="Area2D" groups=["ItemProjectiles"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
shape = SubResource( 1 )

[node name="PinCast" type="RayCast2D" parent="."]
modulate = Color( 0.921569, 0, 1, 1 )
position = Vector2( 0, -133 )
enabled = true
cast_to = Vector2( 0, 319.514 )
collision_mask = 9

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 191 )
shape = SubResource( 2 )

[node name="PinheadHitbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinheadHitbox"]
modulate = Color( 1, 0, 0.772549, 1 )
position = Vector2( 0, -154 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="PinheadHitbox" to="." method="_on_PinheadHitbox_area_entered"]
